# ManifestDownloaders

./: .gitignore  README.md  pyproject.toml
manifestdownloaders/: __init__.py
standalone/: standalone.bat
